test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_values_types/src/cfg_attr_target.sw
library;

#[cfg(target = 42)]
pub fn not_ok() {}